--- a/package.json
+++ b/package.json
@@ -23,19 +23,18 @@
   "author": "Aaron J. Shapiro",
   "license": "MIT",
   "dependencies": {
+    "bind-decorator": "^1.0.11",
+    "mobx": "^5.5.0",
+    "mobx-react": "^5.2.8",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.6.1"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.1",
-    "@types/redux-actions": "^2.3.0",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
