--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "license": "MIT",
   "dependencies": {
     "bind-decorator": "^1.0.11",
+    "bulma": "^0.7.2",
+    "flexboxgrid": "^6.3.1",
     "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
     "react": "^16.5.2",
