--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --open --mode development"
+    "dev": "webpack-dev-server --config webpack.dev.js --mode development --open",
+    "build": "webpack --config webpack.prod.js"
   },
   "jest": {
     "transform": {
@@ -23,34 +23,36 @@
   "author": "Aaron J. Shapiro",
   "license": "MIT",
   "dependencies": {
-    "bind-decorator": "^1.0.11",
-    "bulma": "^0.7.2",
-    "flexboxgrid": "^6.3.1",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "spectre.css": "^0.5.5"
   },
   "devDependencies": {
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.1",
     "awesome-typescript-loader": "^5.2.1",
+    "bind-decorator": "^1.0.11",
     "css-loader": "^1.0.0",
-    "html-loader": "^0.5.5",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "react-test-renderer": "^16.5.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.0",
     "ts-jest": "^23.10.1",
     "typescript": "^3.0.3",
     "webpack": "^4.19.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
   }
 }
