--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bind-decorator": "^1.0.11",
     "bulma": "^0.7.2",
+    "bulma-carousel": "^3.0.0",
     "flexboxgrid": "^6.3.1",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.4",
