--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-stripe-elements": "^2.0.1",
     "spectre.css": "^0.5.5"
   },
   "devDependencies": {
