--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mobx-react": "^5.3.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-markdown": "^4.0.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-stripe-elements": "^2.0.1",
@@ -37,6 +38,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-stripe-elements": "^1.1.9",
     "awesome-typescript-loader": "^5.2.1",
     "bind-decorator": "^1.0.11",
     "css-loader": "^1.0.0",
