--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.18.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.4",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-markdown": "^4.0.4",
