--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-markdown": "^4.0.4",
+    "react-quill": "^1.3.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-stripe-elements": "^2.0.1",
