--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "author": "Aaron J. Shapiro",
   "license": "MIT",
   "dependencies": {
+    "@types/quill": "^2.0.1",
     "axios": "^0.18.0",
-    "brotli-webpack-plugin": "^1.0.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.4",
     "moment": "^2.22.2",
+    "quill": "^1.3.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-markdown": "^4.0.4",
-    "react-quill": "^1.3.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-stripe-elements": "^2.0.1",
@@ -44,6 +44,7 @@
     "@types/react-stripe-elements": "^1.1.9",
     "awesome-typescript-loader": "^5.2.1",
     "bind-decorator": "^1.0.11",
+    "brotli-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
