--- a/package.json
+++ b/package.json
@@ -24,24 +24,22 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "draft-js": "^0.10.5",
     "mobx": "^5.5.0",
     "mobx-react": "^5.3.4",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
-    "react-draft-wysiwyg": "^1.12.13",
-    "react-markdown": "^4.0.4",
+    "react-quill": "^1.3.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-stripe-elements": "^2.0.1",
     "spectre.css": "^0.5.5"
   },
   "devDependencies": {
-    "@types/draft-js": "^0.10.26",
     "@types/react": "^16.4.14",
+    "@types/react-datepicker": "^2.0.0",
     "@types/react-dom": "^16.0.7",
-    "@types/react-draft-wysiwyg": "^1.12.0",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-stripe-elements": "^1.1.9",
     "awesome-typescript-loader": "^5.2.1",
